tests/testcases/errors/BCE0089-7.boo
"""
BCE0089-7.boo(10,5): BCE0089: Type 'Foo' already has a definition for 'bar'.
"""
enum Foo:

	bar
	
	foo
	
	bar
